# uet-2526i-int3306-3-finals-volunteer-hub

./: .gitignore  README.md  deno.json
.github/actions/cargo-load-env/: actions.yml
.github/workflows/: cargo-build.yml  cargo-ci.yml  cargo-dependencies-check.yml  cargo-format-and-lint.yml  cargo-test.yml  sveltekit-minimal-ci.yml  sveltekit-minimal-format-and-lint.yml
backend/: .env.example  Cargo.toml
backend/.cargo/: config.toml
backend/aliases/: Cargo.toml
backend/aliases/src/: lib.rs
backend/bindings/wasm-bindings/: Cargo.toml
backend/bindings/wasm-bindings/src/: build.rs  lib.rs
backend/core/domain/: Cargo.toml
backend/core/domain/src/: lib.rs
backend/core/use-cases/: Cargo.toml
backend/core/use-cases/src/: _boundaries.rs  _interactors.rs  boundaries.rs  gateways.rs  interactors.rs
backend/core/use-cases/src/boundaries/: sign_in.rs  sign_up.rs  subscribe_to_event.rs  unsubscribe_from_event.rs  view_event_history.rs  view_event_recommendation.rs  view_published_events.rs
backend/core/use-cases/src/interactors/: mod.rs
backend/infrastructures/: Cargo.toml
backend/infrastructures/src/: lib.rs
frontend/sveltekit-minimal/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/sveltekit-minimal/src/: app.html
frontend/sveltekit-minimal/src/lib/: index.ts
frontend/sveltekit-minimal/src/lib/server/: index.ts
frontend/sveltekit-minimal/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts
frontend/sveltekit-minimal/src/routes/(authed)/: +layout.server.ts  +layout.svelte
frontend/sveltekit-minimal/src/routes/login/: +page.server.ts  +page.svelte
frontend/sveltekit-minimal/src/routes/logout/: +page.server.ts  +page.svelte.ts
frontend/sveltekit-minimal/src/routes/register/: +page.server.ts  +page.svelte
