[workspace]
members = [
    "./aliases",
    "./core/domain",
    "./core/use-cases",
    "./infrastructures",
    "./bindings/*", "bindings/wasm-bindings",
]
exclude = [
    "./bindings/output",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/NTDuck/uet-2526i-int3306-3-finals-volunteer-hub"
publish = false

[workspace.dependencies]
# Cross-cutting concerns, centralized

# Crates that we choose to marry
# See: https://blessed.rs/crates
anyhow = "1.0.100"
async-trait = "0.1.89"
bon = "3.8.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[workspace.lints.rust]
# See: https://doc.rust-lang.org/rustc/lints/listing/index.html

[workspace.lints.clippy]
# See: https://rust-lang.github.io/rust-clippy/master/index.html

[workspace.metadata.rust-analyzer]
# See: https://rust-analyzer.github.io/book/diagnostics.html

[profile.release]
# `wasm-bindgen`
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
