[package]
name = "aliases"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
