[package]
name = "infrastructures"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
aliases = { path = "../aliases" }
domain = { path = "../core/domain" }
use-cases = { path = "../core/use-cases" }

async-trait = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

argon2 = { version = "0.6.0-rc.1", features = ["std", "parallel", "zeroize"] }
jwt = { version = "0.16.0" }
tokio = { version = "1.47.1", features = ["sync"] }
uuid = { version = "1.18.1", features = ["v7"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Using `uuid` on `wasm32-unknown-unknown` requires
# a source of randomness from [`js`, `rng-getrandom`, `rng-rand`]
uuid = { version = "1.18.1", features = ["v7", "js"] }

[lints]
workspace = true
