[package]
name = "wasm-bindings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
aliases = { path = "../../aliases" }
domain = { path = "../../core/domain" }
use-cases = { path = "../../core/use-cases", features = ["wasm-bindings"] }
infrastructures = { path = "../../infrastructures" }

bon = { workspace = true }

argon2 = { version = "0.6.0-rc.1", features = ["std", "parallel", "zeroize"] }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.9" }
dotenvy = { version = "0.15.7" }  # suggested in lieu of `dotenv` as of security advisory RUSTSEC-2021-0141
tracing = { workspace = true }
tracing-wasm = "0.2.1"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "=0.2.102", features = ["strict-macro"] }  # jsr:@deno/wasmbuild@0.19.3
wasm-bindgen-futures = "=0.4.52"  # jsr:@deno/wasmbuild@0.19.3
serde-wasm-bindgen = "0.6.5"
serde = { workspace = true }
tsify = { version = "0.5.5", features = ["js"], default-features = false }

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
