[package]
name = "domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
aliases = { path = "../../aliases" }

bon = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
