[package]
name = "use-cases"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = ["serde", "wasm-bindings"]
wasm-bindings = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
aliases = { path = "../../aliases" }
domain = { path = "../domain" }

async-trait = { workspace = true }
bon = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, optional = true }
strum = { workspace = true }
tsify = { version = "0.5.5", features = ["js"], default-features = false, optional = true }
wasm-bindgen = { version = "=0.2.102", optional = true }  # jsr:@deno/wasmbuild@0.19.3
thiserror = { workspace = true }

[lints]
workspace = true
